--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ cache:
   - guile-2.0.11
 before_install:
   - sh ./utilities/get_guile.sh
+  - export PKG_CONFIG_PATH=`pwd`/guile/lib/pkgconfig
+  - export LD_LIBRARY_PATH=`pwd`/guile/lib
 script:
   - ./autogen.sh
   - ./configure
