--- a/.travis.yml
+++ b/.travis.yml
@@ -28,5 +28,5 @@ script:
   - guile -e main examples/hello-srv.scm &
   - guile -e main examples/hello-client.scm
 after_success:
-  - lcov -d tests -d src -base-directory . -c -o coverage.info
+  - lcov -d examples -d . -base-directory . -c -o coverage.info
   - coveralls-lcov coverage.info
